<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/Glideoption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:onClick="buttonclicked"
            android:text="@string/Glidetext"
            android:textSize="20sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/LoadOption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="buttonclicked"
            android:text="@string/loadingtext"
            android:textSize="20sp"
            android:textStyle="bold"
            />

        <RadioButton
            android:id="@+id/Retrofitoption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="buttonclicked"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/rertofittext" />

    </RadioGroup>


    <com.udacity.LoadingButton
        android:id="@+id/custom_button"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_margin="20dp"
        app:CircleColor="@color/colorAccent"
        app:backgroundColor="@color/colorPrimary"
        app:buttonLoadingColor="@color/colorPrimaryDark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.90999997"
        app:textColor="@color/white" />

</androidx.constraintlayout.widget.ConstraintLayout>